--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.112.0
-uvicorn==0.30.1
+python-telegram-bot[job-queue,rate-limiter]==21.4
+fastapi==0.112.2
+uvicorn==0.30.6
+aiosqlite==0.20.0
+pytz==2024.2
+python-dotenv==1.0.1
 httpx==0.27.0
-beautifulsoup4==4.12.3
-lxml==5.2.2
-readability-lxml==0.8.1
+google-search-results==2.4.2   # SerpAPI 官方库
