--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,36 @@
 services:
   - type: web
-    name: telegram-gpt5-bot
+    name: telegram-gpt-bot
     env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
+    region: oregon   # 可改成 frankfurt / singapore / ohio 等
+    plan: free       # 免费套餐，内存 512MB
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+
     envVars:
       - key: BOT_TOKEN
-        sync: false
+        sync: false   # 在 Render 控制台 → Environment 添加
       - key: OPENAI_API_KEY
         sync: false
-      - key: OPENAI_MODEL
-        value: gpt-5
+      - key: SERPAPI_KEY
+        sync: false   # 如果只用 Bing，可删除
+      - key: BING_KEY
+        sync: false   # 如果不用 Bing，可删除
       - key: WEBHOOK_SECRET
-        value: dev-secret      # 自定义个复杂的
+        sync: false   # 随机字符串，例如 supersecret123
+      - key: OPENAI_MODEL
+        value: gpt-4.1
+      - key: OPENAI_BASE_URL
+        value: https://api.openai.com/v1
       - key: TIMEOUT_SEC
         value: "60"
-
+      - key: OPENAI_MAX_CONCURRENCY
+        value: "2"
+      - key: CHAT_COOLDOWN_SEC
+        value: "1.2"
+      - key: HISTORY_MAX_TURNS
+        value: "8"
+      - key: HISTORY_MAX_CHARS
+        value: "16000"
