--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-python-telegram-bot[job-queue,rate-limiter]==21.4
 fastapi==0.112.2
 uvicorn==0.30.6
-aiosqlite==0.20.0
-pytz==2024.2
-python-dotenv==1.0.1
-httpx==0.27.0
-redis==5.0.1
-google-search-results==2.4.2   # ✅ SerpAPI 官方库
+httpx==0.27.2
+python-multipart==0.0.9
